# foRward

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac  redoc.sh  test.R
R/: RcppExports.R  foRward-package.r
inst/doc/: SinglePopSims.Rmd  SinglePopSims.html
inst/include/foRward/: SinglePop.hpp  SinglePopSampler.hpp  SinglePopSerialization.hpp  gslutils.hpp  popgenmut.hpp  popgenmutmodel.hpp  standard_model.hpp
man/: evolveStd.Rd  evolveWFsingle.Rd  evolve_std.Rd  foRward.Rd  makeGSLrng.Rd  sample.Rd  sampleSingle.Rd  sampleStd.Rd  sample_std.Rd  writeStdToFile.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  SinglePop.hpp  SinglePopSampler.hpp  WFsingle.cc  WFsingle.hpp  evolveWFsingle.cc  evolve_standard_model.cc  gslutils.cc  gslutils.hpp  popgenmut.cc  popgenmut.hpp  popgenmutmodel.hpp  standard_model.cc  standard_model.hpp
vignettes/: QuickStart.Rmd  SinglePopSims.Rmd
